Fixing h2 and h3 being lopped off on mobile

--- a/source/stylesheets/_globals.sass
+++ b/source/stylesheets/_globals.sass
@@ -46,16 +46,24 @@ h2
   font-size: 30px
   font-weight: 300
   line-height: 1.1em
-  margin-top: 1.5em
   margin-bottom: 0px
+  padding-top: 3em
+  margin-top: -1.5em
+  +respond-to(tablet)
+    padding-top: 1.5em
+    margin-top: 0
 
 h3
   +source-sans
   font-size: 24px
   font-weight: 400
   line-height: 1.2em
-  margin-top: 1.5em
   margin-bottom: 0.6em
+  padding-top: 3em
+  margin-top: -1.5em
+  +respond-to(tablet)
+    padding-top: 1.5em
+    margin-top: 0
 
 
 
@@ -136,13 +144,15 @@ hr.typography
     max-width: 620px
     +landing-page
       max-width: none
-  p img
-    overflow-x: auto
   h2 + h3, h4 + h5
-    margin-top: 0.75em
+    padding-top: 3em
+    margin-top: -2.25em
     margin-bottom: 0.75em
+    +respond-to(tablet)
+      padding-top: 0.75em
+      margin-top: 0
   h3 + h4
-    margin-top: -0.75em
+    padding-top: -0.75em
     margin-bottom: 0.75em
   img + strong
     margin-bottom: 1.2em
